--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
       <a class="navbar-brand text-bold d-flex align-items-center" href="#">
         <img
-          [src]="'assets/exam.svg'"
+          [src]="'assets/messi.svg'"
           alt="logo"
           width="70"
           style="padding-right: 10px;"
