--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -3,7 +3,7 @@
         <ng-container *ngIf="!isQuizCompleted">
             <div class="d-flex justify-content-between p-3">
                 <div class="image">
-                    <img [src]="'assets/exam.svg'"
+                    <img [src]="'assets/messi.svg'"
                     alt="logo"
                     width="50"
                     style="padding-right: 10px;">
